Adding description at readme page + fixing config to deploy at GH pages

--- a/packages/docs/src/pages/home.stories.mdx
+++ b/packages/docs/src/pages/home.stories.mdx
@@ -5,4 +5,5 @@ import { Meta } from '@storybook/addon-docs'
 
 # Nebula UI
 
-Design System do Nebula.
+Welcome to Design System do Nebula!\
+Here you'll find components, styles, and design guidelines used in the online scheduling application.
