--- a/packages/docs/src/pages/home.stories.mdx
+++ b/packages/docs/src/pages/home.stories.mdx
@@ -3,7 +3,7 @@ import { Meta } from '@storybook/addon-docs'
 
 <Meta title="Home" />
 
-# Nebula UI
+# Nebulae UI
 
-Welcome to Design System do Nebula!\
+Welcome to Design System do Nebulae!\
 Here you'll find components, styles, and design guidelines used in the online scheduling application.
