--- a/packages/docs/src/pages/tokens/radii.stories.mdx
+++ b/packages/docs/src/pages/tokens/radii.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs'
 import { TokensGrid } from '../../components/TokensGrid'
-import { radii } from '@nebula-ui/tokens'
+import { radii } from '@nebulae-ui/tokens'
 
 <Meta title="Tokens/Radii" />
 
